Modificación statics files dirs comentado

--- a/templates/carrito/index.html
+++ b/templates/carrito/index.html
@@ -15,13 +15,13 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="{% static '/banner/banner1.png' %}" class="img-fluid" alt="Responsive image" >
+				<img src="{% static '/banner/banner1.png' %}" class="d-block w-100 img-fluid img-responsive" alt="..." style="width: 100%; height: auto">
 			</div>
 			<div class="carousel-item">
-				<img src="{% static '/banner/banner2.png' %}" class="img-fluid" alt="Responsive image" >
+				<img src="{% static '/banner/banner2.png' %}" class="d-block w-100 img-fluid img-responsive" alt="..." style="width: 100%; height: auto">
 			</div>
 			<div class="carousel-item">
-				<img src="{% static '/banner/banner3.png' %}" class="img-fluid" alt="Responsive image" >
+				<img src="{% static '/banner/banner3.png' %}" class="d-block w-100 img-fluid img-responsive" alt="..." style="width: 100%; height: auto">
 			</div>
 		</div>
 	</div>
